[project]
name = "ag-ui-persistence"
version = "0.1.0"
description = "Async Python utility library for persisting AG-UI protocol events, runs, and threads"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.22.0",
    "asyncpg>=0.31.0",
    "sqlalchemy[asyncio]>=2.0.48",
    "pydantic>=2.12.0",
]

[project.optional-dependencies]
test = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
